api and ui and ai and rust code deployemnt there

--- a/server/package.json
+++ b/server/package.json
@@ -21,20 +21,24 @@
     "@grammyjs/conversations": "^1.2.0",
     "@ngrok/ngrok": "^1.4.1",
     "@solana/web3.js": "^1.98.0",
-    "agent-twitter-client": "^0.0.18",
     "@useorbis/db-sdk": "0.0.60-alpha",
+    "agent-twitter-client": "^0.0.18",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "ethers": "^6.9.0",
     "express": "^4.21.1",
     "grammy": "^1.32.0",
     "http-errors": "^2.0.0",
     "jsonc-parser": "^3.3.1",
+    "mongoose": "^8.10.0",
     "node-cache": "^5.1.2",
+    "openai": "^4.83.0",
     "prettier": "^3.4.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tsc-watch": "^6.2.1"
   },
   "devDependencies": {
@@ -48,6 +52,9 @@
     "@types/node": "^20.17.6",
     "@types/node-cache": "^4.2.5",
     "@types/node-fetch": "^2.6.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8",
