--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.8",
+    "@privy-io/react-auth": "^2.4.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.60.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.18",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
